--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,35 @@
 pandas==2.2.3
 seaborn==0.13.2
 streamlit==1.33.0
+beautifulsoup4==4.13.4
+docx2pdf==0.1.8
+docx2txt==0.8
+email_validator==2.2.0
+fitz==0.0.1.dev2
+fpdf==1.7.2
+matplotlib==3.8.4
+moviepy==1.0.3
+mysql_connector_repackaged==0.3.1
+pandas==2.2.3
+Pillow==11.2.1
+plotly==5.22.0
+pushbullet.py==0.9.1
+PyAutoGUI==0.9.54
+PyPDF2==3.0.1
+pytesseract==0.3.13
+python_bcrypt==0.3.2
+python_docx==1.1.2
+reportlab==4.2.0
+Requests==2.32.3
+seaborn==0.13.2
+streamlit==1.38.0
+streamlit_card==1.0.2
+streamlit_extras==0.7.1
+streamlit_js_eval==0.1.7
+streamlit_lottie==0.0.5
+streamlit_navigation_bar==3.3.0
+streamlit_option_menu==0.3.13
+tools==1.0.2
+~treamlit==1.33.0
+~treamlit==1.41.1
+~treamlit==1.42.2
